--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+ 
 .menuBurger {
     display: none;
 
@@ -462,7 +462,7 @@ main img {
 .rightfoter {
     width: 50%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 
 }
 
@@ -485,13 +485,15 @@ main img {
 .fidback {
     display: flex;
     flex-direction: column;
+    width: 327px;
 }
 
 .outputtext {
     background-color: #2b2b2b;
     border: 1px solid rgba(255, 255, 255, 0.316);
-    width: 327px;
+    width: 80%;
     height: 54px;
+    color: white;
 }
 
 .fidback select {
@@ -503,10 +505,10 @@ main img {
 }
 
 .checkboxtext {
-    width: 369px;
-    height: 78px;
+    width: 100%;
+    height: 200px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-self: self-start;
     margin-top: 56px;
 }
@@ -519,7 +521,8 @@ main img {
     line-height: 13px;
     letter-spacing: 2.4px;
     text-transform: uppercase;
-
+    width: 369px;
+    height: 78px;
     color: rgba(255, 255, 255, 0.5);
 
 }
@@ -528,7 +531,7 @@ main img {
     background-color: #2b2b2b;
     color: #2b2b2b;
     width: 28px;
-    height: 28px;
+    height: 26px;
 
 }
 
@@ -641,6 +644,7 @@ main img {
     }
     .info{
         margin-top: 40px;
+        height: 1200px;
     }
     .isntruc{
         flex-direction: column;
@@ -649,20 +653,26 @@ main img {
     .isntruc div{
         width: 100%;
         margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
     .woman .container{
-        margin-top: 500px;
         background-position: center;
         width: 100%;
         padding: 0 0;
-        
+        margin-top: 20px;   
         
     }
     .review{
         width: 100%;
+        
+        padding-top: 40px;
     }
     .woman{
         margin-bottom: 120px;
+        height: 800px;
     }
     .text1 , .text2{
         font-size: 30px;
@@ -672,15 +682,18 @@ main img {
         width: 90%;
     }
     .work1{
+        display: flex;
         flex-direction: column;
         text-align: center;
         align-items: center;
+        
     }
     #work2{
         flex-direction: column-reverse;
     }
     .work1 div{
         width: 200px;
+        margin-right: 0%;
     }
     .work1 img{
         width: 400px;
@@ -697,6 +710,7 @@ main img {
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        gap: 30px;
     }
     .tarif{
         height: 900px;
@@ -707,18 +721,24 @@ main img {
     .tarif .container{
         height: 90%;
     }
+    .tarif .container div img{
+        width: 300px;
+    }
     .rightfoter{
         flex-direction: column;
-        margin-top: 30px;
+        margin-top: 120px;
         align-items: center;
-        margin-left: 100px;
+        height: 50%;
     }
     .end .container{
         flex-direction: column;
-        height: 800px;
-    } git 
+        height: 1000px;
+        align-items: center;
+
+    }
     .leftfoter{
-        margin-left: 90px;
+        width: 100%;
+        height: 50%;
     }
     .fidback{
         margin-top: 20px;
@@ -727,10 +747,25 @@ main img {
         width: 100px;
     }
     .end{
-        height: 1200px;
+        height: 1400px;
     }   
     .lastword{
-        margin-left: 310px;
-        margin-top: 200px;
+        margin-left: 280px;
+        margin-top: 190px;
     }
 }
+/* @media (max-width: 768px){
+
+}
+@media (max-width: 992px){
+
+}
+@media (max-width: 1200px){
+
+}
+@media (max-width: 1400px){
+
+}
+@media (max-width: 576px){
+    
+} */
