--- a/style.css
+++ b/style.css
@@ -613,24 +613,39 @@ main img {
     .roomsDesign {
         display: flex;
         flex-direction: column;
+        text-align: center;
+        gap: 15px;
     }
-
+    .roomsDesign p{
+        font-family: 'Roboto';
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.5px;
+        color: #000000;
+        margin-bottom: 4px;
+    }
     .room {
         width: 100%;
     }
 
     .brands {
         margin-top: 80px;
-        height: 400px;
+        height: 650px;
     }
 
     .logobrands {
         display: flex;
         flex-direction: column;
         margin-top: 20px;
-        height: 400px;
+        height: 650px;
         align-items: center;
         gap: 8px;
+    }
+    .logobrands div img{
+        width: 100px;
     }
     .slade>img {
         display: none;
@@ -665,10 +680,14 @@ main img {
         margin-top: 20px;   
         
     }
+    .woman .container a{
+        margin-left: 20px;
+    }
     .review{
         width: 100%;
         
         padding-top: 40px;
+        padding-left: 20px;
     }
     .woman{
         margin-bottom: 120px;
@@ -699,10 +718,10 @@ main img {
         width: 400px;
     }
     .plus{
-        height: 200vh;
+        height: 250vh;
     }
     .just{
-        margin-top: 320px;
+        /* margin-top: 320px; */
         height: 300px;
     }
     .tarif .container div{
